// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthRehydration Snapshots renders matching snapshot for default OAuth rehydration 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={false}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "width": "100%",
          }
        }
        testID="login"
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginTop": 10,
              "width": "100%",
            }
          }
        >
          <Image
            resizeMethod="auto"
            resizeMode="contain"
            source="metamask-name"
            style={
              {
                "alignSelf": "center",
                "height": 40,
                "marginTop": 10,
                "tintColor": "#131416",
                "width": 80,
              }
            }
          />
          <TouchableOpacity
            activeOpacity={1}
            delayLongPress={10000}
            onLongPress={[Function]}
            style={
              {
                "alignSelf": "center",
                "height": 175,
                "justifyContent": "center",
                "marginTop": 48,
                "width": 175,
              }
            }
          >
            <Image
              resizeMethod="auto"
              source="metamask-name"
              style={
                {
                  "alignSelf": "center",
                  "height": 175,
                  "width": 175,
                }
              }
            />
          </TouchableOpacity>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginVertical": 24,
                "textAlign": "center",
              }
            }
            testID="login-title"
          >
            Welcome back!
          </Text>
          <View
            style={
              {
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "rowGap": 8,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#131416",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  {
                    "marginBottom": -4,
                  },
                ]
              }
            >
              Password
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "#b4b4b566",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                }
              }
              testID="textfield"
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoFocus={false}
                  editable={true}
                  keyboardAppearance="light"
                  multiline={false}
                  numberOfLines={1}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Enter password"
                  placeholderTextColor="#66676a"
                  returnKeyType="done"
                  secureTextEntry={true}
                  style={
                    {
                      "backgroundColor": "inherit",
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "height": 46,
                      "letterSpacing": 0,
                      "lineHeight": 0,
                      "opacity": 1,
                    }
                  }
                  testID="login-password-input"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "rowGap": 2,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "column",
                "gap": 0,
                "marginTop": 16,
                "width": "100%",
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              disabled={true}
              loading={false}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="log-in-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Unlock
              </Text>
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "marginTop": 32,
              }
            }
          >
            <TouchableOpacity
              disabled={false}
              onPress={[Function]}
              testID="other-methods-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Use a different login method
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;

exports[`OAuthRehydration Snapshots renders matching snapshot for outdated seedless password 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={false}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "paddingHorizontal": 24,
            "width": "100%",
          }
        }
        testID="login"
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginTop": 10,
              "width": "100%",
            }
          }
        >
          <Image
            resizeMethod="auto"
            resizeMode="contain"
            source="metamask-name"
            style={
              {
                "alignSelf": "center",
                "height": 40,
                "marginTop": 10,
                "tintColor": "#131416",
                "width": 80,
              }
            }
          />
          <TouchableOpacity
            activeOpacity={1}
            delayLongPress={10000}
            onLongPress={[Function]}
            style={
              {
                "alignSelf": "center",
                "height": 175,
                "justifyContent": "center",
                "marginTop": 48,
                "width": 175,
              }
            }
          >
            <Image
              resizeMethod="auto"
              source="metamask-name"
              style={
                {
                  "alignSelf": "center",
                  "height": 175,
                  "width": 175,
                }
              }
            />
          </TouchableOpacity>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginVertical": 24,
                "textAlign": "center",
              }
            }
            testID="login-title"
          >
            Welcome back!
          </Text>
          <View
            style={
              {
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "rowGap": 8,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#131416",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  {
                    "marginBottom": -4,
                  },
                ]
              }
            >
              Password
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "#ca3542",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                }
              }
              testID="textfield"
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoFocus={false}
                  editable={true}
                  keyboardAppearance="light"
                  multiline={false}
                  numberOfLines={1}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Enter password"
                  placeholderTextColor="#66676a"
                  returnKeyType="done"
                  secureTextEntry={true}
                  style={
                    {
                      "backgroundColor": "inherit",
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "height": 46,
                      "letterSpacing": 0,
                      "lineHeight": 0,
                      "opacity": 1,
                    }
                  }
                  testID="login-password-input"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "rowGap": 2,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ca3542",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
              testID="invalid-password-error"
            >
              Your password was changed recently.
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "column",
                "gap": 0,
                "marginTop": 16,
                "width": "100%",
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              disabled={true}
              loading={false}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="log-in-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Unlock
              </Text>
            </TouchableOpacity>
          </View>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "marginVertical": 14,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="reset-wallet-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Forgot password?
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;
